--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -1,6 +1,6 @@
 .self-image{
 height:auto;
-width:240px;
+width:80%;
 }
 
 body{
@@ -25,7 +25,7 @@ ul,li,p,h1,h2,.name{
 
 
 .sub_item{
-	text-indent:10px;
+	text-indent:5%;
 	list-style-type:none;
 }
 
