--- a/stylesheets/style-mon.css
+++ b/stylesheets/style-mon.css
@@ -8,16 +8,24 @@ body{
 	background-color:#00CCCC;
 }
 
-ul,li,p,h1,h2,.name{
+ul,li,p,h1,h2,.name,.textbox,.lead_item,.sub_item,.current,.nolist{
 	font-family: 'Helvetica Neue', Helvetica, Arial, serif;
     font-size: medium; 
     color: black;
+}
+
+p{
+	text-indent:50px;
 }
 
 .name{
 	font-size:large;
 	color: black;
 }
+.textbox{
+	height:auto;
+	width:400px;
+	margin:50px;
 
 .lead_item{
 	font-weight:500;
