--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -3,14 +3,22 @@ height:auto;
 width:80%;
 }
 
+
 body{
 	background-color:#00CCCC;
 }
 
-ul,li,p,h1,h2,.name{
+ul,li,p,h1,h2,.name,.textbox,.lead_item,.sub_item,.current,.nolist{
 	font-family: 'Helvetica Neue', Helvetica, Arial, serif;
     font-size: medium; 
     color: black;
+}
+
+
+.textbox{
+	height:auto;
+	width:200px;
+	margin:0px;
 }
 
 .name{
