updated replacement background color

--- a/stylesheets/style-mon.css
+++ b/stylesheets/style-mon.css
@@ -5,7 +5,7 @@ width:240px;
 
 body{
 	background-image:url('../background.jpg');
-	background-color:#00CCCC;
+	background-color:#EEE685;
 }
 
 ul,li,p,h1,h2,.name,.textbox,.lead_item,.sub_item,.current,.nolist{
