--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -6,7 +6,7 @@ margin:10px;
 
 
 body{
-	background-color:#00CCCC;
+	background-color:#EEE685;
 }
 
 ul,li,p,h1,h2,.name,.textbox,.lead_item,.sub_item,.current,.nolist{
