--- a/stylesheets/style-mon.css
+++ b/stylesheets/style-mon.css
@@ -21,6 +21,10 @@ p{
 	text-indent:50px;
 }
 
+.example_text{
+	margin:20px;
+}
+
 .name{
 	font-size:large;
 	color: black;
@@ -29,10 +33,23 @@ p{
 	font-size:30px;
 	position:relative;
 }
+
 .textbox{
 	height:auto;
 	width:500px;
 	margin:0px 50px;
+}
+
+.textbox_small{
+	height:auto;
+	width:400px;
+	margin:0px 50px;
+	text-indent:0px;
+}
+
+.link_example{
+	left:80px;
+	position:relative;
 }
 
 .lead_item{
@@ -63,7 +80,7 @@ p{
 	left:10px;
 }
 
-.link_bio{
+.link_bio,.link_resume{
 	margin:10px;
 	position:relative;
 	float: left;
@@ -72,11 +89,7 @@ p{
 }
 
 .link_resume{
-	margin:10px;
-	position:relative;
-	float: left;
 	bottom: 20px;
-	left:40px;
 }
 
 .headerbox{
