--- a/stylesheets/style-mon.css
+++ b/stylesheets/style-mon.css
@@ -114,16 +114,16 @@ body {
 }
 
 #map_canvas {
-	width: 300px;
-	height: 300px;
+	width: 100%;
+	height: 90%;
 	position:relative;
 	left:0px;
 	top:10px;
 }
 #map_header{
-	width: 300px;
-	height: 300px;
+	width: 50%;
+	height: 80%;
 	position:absolute;
 	left:400px;
-	top:100px;
+	top:75px;
 }
