--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -114,7 +114,7 @@ h1 {
 /* Homepage */
 
 .mainContent {
-	margin: 10% 0;
+	margin: 10px 10% 0 10%;
 	width: 100%;
 }
 
@@ -125,6 +125,7 @@ h1 {
 	
 	.mainContent p{
 		margin: 0 0 10px 0;
+		font-size:large;
 	}
 	
 	.mainContent .bio {
