--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -51,7 +51,6 @@ table {
 /** Globals **/
 html,body {
 	height: 100%;
-	max-width: max-content;
 }
 
 body{
@@ -130,7 +129,7 @@ h1 {
 	}
 	
 	.mainContent .bio {
-		width: 100%;
+		width: 80%;
 		margin: 10%;
 		float: left;
 	}
@@ -139,6 +138,7 @@ h1 {
 		height:auto;
 		width:80%;
 		margin:10%;
+		margin-top:0;	
 	}
 
 	
