--- a/stylesheets/style-phone.css
+++ b/stylesheets/style-phone.css
@@ -73,7 +73,7 @@ ul,li,p,h1,h2,.name,.textbox,#map_header,.description {
 }
 
 h1 {
-	font-size:30px;
+	font-size:large;
 	margin: 25px 0 0 35px;
 }
 
@@ -130,7 +130,6 @@ h1 {
 	
 	.mainContent .bio {
 		width: 80%;
-		margin: 10%;
 		float: left;
 	}
 
