fixing error with firefox in css

--- a/stylesheets/style-mon.css
+++ b/stylesheets/style-mon.css
@@ -216,6 +216,9 @@ h1 {
 	display: block;
 }
 
+#map_canvas img { max-width:none; }
+
+
 table, th, td{
 	border: 1px solid black;
 	text-align:center;
